<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Sort"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/rbGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle">

            <RadioButton
                android:id="@+id/rbTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/Title" />

            <RadioButton
                android:id="@+id/rbArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Artist" />

            <RadioButton
                android:id="@+id/rbAlbum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sAlbum" />

            <RadioButton
                android:id="@+id/rbDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Duration" />

            <RadioButton
                android:id="@+id/rbDateAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Date_added" />

            <!--<RadioButton-->
            <!--android:id="@+id/rbYear"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Year" />-->
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rbGroup"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbSort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_desc" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sort" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cancel" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>