<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_trans"
    android:orientation="vertical"
    tools:context="media.musicplayer.songs.mp3player.audio.ui.MoreFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- TODO: Update blank fragment layout -->
        <!--<ListView-->
        <!--android:id="@+id/lvMore"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"></ListView>-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/titleVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/Version"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlMoreApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/titleMoreapp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/more_app"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/titleLanguage"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/language"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/curLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:visibility="gone">

            <TextView
                android:id="@+id/titleTimer"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/timer"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/curTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/timernotset"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlSkin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/titleSkin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/Skin"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/skinDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlPlug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/titlePlug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/plugin"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/detailPlug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@android:color/white"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/chk_plug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:button="@drawable/newapptheme_btn_check_holo_dark" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlShake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/titleShake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/shake"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/detailShake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@android:color/white"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/chk_shake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"

                android:button="@drawable/newapptheme_btn_check_holo_dark" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlLock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/titleLock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/lock"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/detailLock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@android:color/white"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/chk_lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"

                android:button="@drawable/newapptheme_btn_check_holo_dark" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlRateus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/titleRateus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/rate_us"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@android:color/white" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>
