<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="media.musicplayer.songs.mp3player.audio.ui.EqualizerActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imvRoot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />
    </FrameLayout>

    <include
        android:id="@+id/appbar"
        layout="@layout/include_toolbar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbar"
        android:background="@color/black_trans"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/saveEqualizer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/card_holo_blue"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground">

                    <TextView
                        android:id="@+id/save_as_preset_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:ellipsize="marquee"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:text="@string/save_preset"
                        android:textColor="#FFFFFF" />

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/loadEqualizer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:popupBackground="@color/transparent_black"></Spinner>
                <!--<RelativeLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:background="?android:selectableItemBackground">-->

                <!--<TextView-->
                <!--android:id="@+id/load_preset_text"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_centerInParent="true"-->
                <!--android:ellipsize="marquee"-->
                <!--android:padding="5dp"-->
                <!--android:singleLine="true"-->
                <!--android:text="@string/load_preset"-->
                <!--android:textColor="#FFFFFF" />-->

                <!--</RelativeLayout>-->
            </RelativeLayout>
            <!--<Button-->
            <!--android:id="@+id/saveEqualizer"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/save_preset" />-->

            <!--<Button-->
            <!--android:id="@+id/loadEqualizer"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/load_preset" />-->


        </LinearLayout>

        <LinearLayout
            android:id="@+id/presetView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <media.musicplayer.songs.mp3player.audio.widgets.EqualizerView
                android:id="@+id/equalizerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/hgBassContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/bassTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:text="@string/bass"
                    android:textColor="@android:color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/hgVolumeContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/volumeTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:text="@string/volume"
                    android:textColor="@android:color/white" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/hgVirtualContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/virtualTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:text="@string/virtual"
                    android:textColor="@android:color/white" />

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
